fix: contrast ratio issue

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -7,6 +7,7 @@ $font-family-heading: 'Fredoka One', sans-serif;
 $pure-white: #fff;
 $pure-black: #000;
 $curious-blue: #3489d2;
+$dark-blue: #174269;
 
 $sunglow: #e46663;
 $dodger-blue: #0ebeff;
@@ -14,10 +15,10 @@ $bright-sun: #ffdd40;
 $spring-rain: #98cba0;
 $medium-purple: #ae63e4;
 
-$youtube: #CD201F;
-$patreon: #F96854;
-$instagram: #E4405F;
-$twitter: #1DA1F2;
+$youtube: #cd201f;
+$patreon: #f96854;
+$instagram: #e4405f;
+$twitter: #1da1f2;
 $twitch: #6441a4;
 
 $color-copy: #222;
